tests/snapshots/examples_fixtures/ModuleGraph__ConstDivideByZero.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ConstDivideByZero.flx
== compile ==
failed (module)
== diagnostics ==
Error[E024]: Module Path Mismatch

Module name `ModuleGraph.ConstDivideByZero` doesn't match file path `examples/ModuleGraph/ConstDivideByZero.flx`.

  examples/ModuleGraph/ConstDivideByZero.flx:3:1
  |
3 | module ModuleGraph.ConstDivideByZero {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
