tests/snapshots/examples_fixtures/ModuleGraph__ModuleGraphA.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ModuleGraphA.flx
== compile ==
failed (module)
== diagnostics ==
Error[E024]: Module Path Mismatch

Module name `ModuleGraph.ModuleGraphA` doesn't match file path `examples/ModuleGraph/ModuleGraphA.flx`.

  examples/ModuleGraph/ModuleGraphA.flx:3:1
  |
3 | module ModuleGraph.ModuleGraphA {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
