tests/snapshots/examples_fixtures/ModuleGraph__ModuleGraphB.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ModuleGraphB.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ModuleGraph.ModuleGraphB` doesn't match file path `examples/ModuleGraph/ModuleGraphB.flx`.

  examples/ModuleGraph/ModuleGraphB.flx:3:1
  |
3 | module ModuleGraph.ModuleGraphB {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
