tests/snapshots/examples_fixtures/ModuleGraph__const_divide_by_zero_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/const_divide_by_zero_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `ModuleGraph.ConstDivideByZero` to import.

  examples/ModuleGraph/const_divide_by_zero_error.flx:2:1
  |
2 | import ModuleGraph.ConstDivideByZero
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `ModuleGraph.ConstDivideByZero.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `ModuleGraph.ConstDivideByZero` under roots: examples/ModuleGraph, src (imported from examples/ModuleGraph/const_divide_by_zero_error.flx).
== stdout ==
<not executed>
