tests/snapshots/examples_fixtures/ModuleGraph__const_string_ordering_main.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/const_string_ordering_main.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `ModuleGraph.ConstStringOrdering` to import.

  examples/ModuleGraph/const_string_ordering_main.flx:2:1
  |
2 | import ModuleGraph.ConstStringOrdering
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `ModuleGraph.ConstStringOrdering.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `ModuleGraph.ConstStringOrdering` under roots: examples/ModuleGraph, src (imported from examples/ModuleGraph/const_string_ordering_main.flx).
== stdout ==
<not executed>
